# ToDo

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app-compose/: build.gradle.kts
app-compose/src/main/: AndroidManifest.xml
app-compose/src/main/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/anim/: loading.json
app/src/main/res/drawable/: circular_progress_bar.xml
app/src/main/res/layout/: activity_main.xml  activity_main_vertical.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml
common-lib/: build.gradle.kts
common-lib/src/main/: AndroidManifest.xml
common-lib/src/main/cpp/: CMakeLists.txt  native-lib.cpp
common-lib/src/main/res/drawable/: bg_dialog_loading.xml
common-lib/src/main/res/layout/: dialog_loading.xml
common-lib/src/main/res/values/: themes.xml
component-service/: build.gradle.kts
framework-lib/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
module-accounting/: build.gradle.kts
module-accounting/src/main/res/layout/: fragment_accounting.xml  item_accounting_list.xml
module-accounting/src/main/res/values/: strings.xml
module-gallery/: build.gradle.kts
module-gallery/src/main/: AndroidManifest.xml
module-gallery/src/main/res/layout/: activity_photo_viewer.xml  fragment_gallery.xml  item_gallery.xml  item_photo_viewer.xml
module-gallery/src/main/res/values/: strings.xml
module-media/: build.gradle.kts
module-media/src/main/: AndroidManifest.xml
module-my/: build.gradle.kts
module-my/src/main/: AndroidManifest.xml
module-schedule/: build.gradle.kts
module-ui/: build.gradle.kts
navigation-tab/: build.gradle.kts
shared/: build.gradle.kts
web-lib/: build.gradle.kts
web-lib/src/main/: AndroidManifest.xml
web-lib/src/main/assets/: TestWebView.html
(+245 files in other folders)
